# readtok_bot

./: .gitignore  README.md  alembic.ini  docker-compose.dev.yaml  pyproject.toml  ruff.toml
src/readtok/auth/: id_provider.py  telegram_auth.py
src/readtok/books/: episode_generator.py  exceptions.py  fb2_book_parser.py  gateways.py  models.py  services.py
src/readtok/cli/: handlers.py
src/readtok/entrypoint/: bot.py  cli.py  config.py  di.py
src/readtok/infra/bootstrap/: seeder.py
src/readtok/infra/db/: transaction_manager.py
src/readtok/infra/db/migrations/: env.py
src/readtok/infra/db/migrations/versions/: 2fdcc2a232a8_add_book_categories_table.py  b1b64b175d9b_add_users_table.py  d92c220e0637_add_book_episodes_table.py  f8028b2e5271_add_books_and_book_notes_tables.py
src/readtok/tgbot/: handlers.py
src/readtok/users/: exceptions.py  gateways.py  models.py
